Removed unwanted icons, added back/close

--- a/l10n/de/viewer.properties
+++ b/l10n/de/viewer.properties
@@ -1,4 +1,5 @@
 bookmark.title=Aktuelle Ansicht (Kopieren oder in einem neuen Fenster öffnen)
+close.title=Schließen
 previous.title=Zurück
 next.title=Vor
 print.title=Drucken
